@@ -11,7 +11,6 @@ import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -20,24 +19,18 @@ public class CustomUserDetailsService implements UserDetailsService {
     private final UserRepository userRepository;
 
     @Override
-    public UserDetails loadUserByUsername(String email)
-            throws UsernameNotFoundException {
-
+    public UserDetails loadUserByUsername(String email) throws UsernameNotFoundException {
         User user = userRepository.findByEmail(email)
-                .orElseThrow(() ->
-                        new UsernameNotFoundException("User not found: " + email)
-                );
+                .orElseThrow(() -> new UsernameNotFoundException("User not found: " + email));
 
-        // LẤY ROLE TỪ BẢNG user_role
-        List<SimpleGrantedAuthority> authorities = user.getUserRoles()
-                .stream()
+        List<SimpleGrantedAuthority> authorities = user.getUserRoles().stream()
                 .map(UserRole::getRole)
                 .map(role -> new SimpleGrantedAuthority("ROLE_" + role.getName()))
-                .collect(Collectors.toList());
+                .toList();
 
         return new org.springframework.security.core.userdetails.User(
                 user.getEmail(),
-                user.getPasswordHash(),   // ✅ ĐÚNG FIELD
+                user.getPasswordHash(),
                 authorities
         );
     }
